--- a/portfolio.html
+++ b/portfolio.html
@@ -10,75 +10,97 @@
       padding: 0;
       box-sizing: border-box;
       font-family: "Segoe UI", sans-serif;
+      scroll-behavior: smooth;
     }
     body {
-      background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
       color: #fff;
       line-height: 1.6;
     }
     header {
       text-align: center;
-      padding: 60px 20px;
-      background: rgba(0,0,0,0.3);
+      padding: 80px 20px;
+      background: rgba(0,0,0,0.4);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
     }
     header h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
+      font-size: 3.5rem;
+      margin-bottom: 15px;
       color: #00e6ff;
+      text-shadow: 0 0 15px #00e6ff;
+      animation: glow 2s infinite alternate;
+    }
+    @keyframes glow {
+      from { text-shadow: 0 0 10px #00e6ff; }
+      to { text-shadow: 0 0 25px #00bcd4; }
     }
     header p {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       color: #ddd;
     }
     nav {
       background: #111;
       padding: 15px;
       text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
     nav a {
       color: #fff;
-      margin: 0 15px;
+      margin: 0 20px;
       text-decoration: none;
       font-weight: bold;
+      font-size: 1.1rem;
       transition: 0.3s;
     }
     nav a:hover {
       color: #00e6ff;
+      text-shadow: 0 0 10px #00e6ff;
     }
     section {
-      padding: 60px 20px;
-      max-width: 1000px;
+      padding: 70px 20px;
+      max-width: 1100px;
       margin: auto;
     }
     .about h2, .projects h2, .contact h2 {
       text-align: center;
-      margin-bottom: 20px;
-      font-size: 2rem;
+      margin-bottom: 25px;
+      font-size: 2.3rem;
       color: #00e6ff;
+      text-shadow: 0 0 10px #00e6ff;
     }
     .about p {
       text-align: center;
       font-size: 1.2rem;
+      max-width: 700px;
+      margin: auto;
+      color: #eee;
     }
     .projects-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 25px;
+      margin-top: 30px;
     }
     .project {
       background: #1a1a1a;
-      padding: 20px;
-      border-radius: 10px;
-      transition: transform 0.3s;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.4);
+      transition: transform 0.4s, box-shadow 0.4s;
     }
     .project:hover {
-      transform: translateY(-5px);
+      transform: translateY(-8px) scale(1.03);
+      box-shadow: 0 8px 25px rgba(0, 230, 255, 0.4);
       background: #222;
     }
     .project h3 {
-      margin-bottom: 10px;
+      margin-bottom: 12px;
       color: #00e6ff;
+    }
+    .project p {
+      color: #ccc;
     }
     .contact form {
       display: flex;
@@ -87,23 +109,47 @@
       margin: auto;
     }
     .contact input, .contact textarea {
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
+      background: #2c3e50;
+      color: #fff;
+      font-size: 1rem;
+    }
+    .contact input:focus, .contact textarea:focus {
+      outline: none;
+      border: 2px solid #00e6ff;
+      background: #34495e;
     }
     .contact button {
-      padding: 12px;
+      padding: 14px;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       background: #00e6ff;
       color: #000;
       font-weight: bold;
+      font-size: 1.1rem;
       cursor: pointer;
       transition: 0.3s;
     }
     .contact button:hover {
       background: #00bcd4;
+      box-shadow: 0 0 15px #00e6ff;
+    }
+    .socials {
+      text-align: center;
+      margin-top: 25px;
+    }
+    .socials a {
+      margin: 0 12px;
+      font-size: 1.5rem;
+      color: #00e6ff;
+      transition: 0.3s;
+    }
+    .socials a:hover {
+      color: #00bcd4;
+      text-shadow: 0 0 10px #00e6ff;
     }
     footer {
       text-align: center;
@@ -114,6 +160,8 @@
       color: #aaa;
     }
   </style>
+  <!-- FontAwesome for social icons -->
+  <script src="https://kit.fontawesome.com/4d4a2b2d4f.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -129,8 +177,8 @@
 
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p>Hello! I am a 15-year-old self-taught programmer.  
-       I love coding, building projects, and learning new technologies.  
+    <p>Hello! I am a 15-year-old self-taught programmer.
+       I love coding, building projects, and learning new technologies.
        My dream is to grow as a developer and create useful apps for people.</p>
   </section>
 
@@ -160,6 +208,11 @@
       <textarea rows="5" placeholder="Your Message"></textarea>
       <button type="submit">Send Message</button>
     </form>
+    <div class="socials">
+      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-telegram"></i></a>
+    </div>
   </section>
 
   <footer>
